Teste de img de satelite

--- a/views/map.ejs
+++ b/views/map.ejs
@@ -21,7 +21,12 @@
          var map = new L.map('map', mapOptions);
          
          // Creating a Layer object
-         var layer = new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
+         //var layer = new L.TileLayer('http://{s}.google.com/vt/lyrs=m&x={x}&y={y}&z={z}');
+
+         var layer = new L.TileLayer('http://{s}.google.com/vt/lyrs=s&x={x}&y={y}&z={z}',{
+            maxZoom: 20,
+            subdomains:['mt0','mt1','mt2','mt3']
+         });
          
          // Adding layer to the map
          map.addLayer(layer);
