--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,15 +1,48 @@
 <!DOCTYPE html>
-<html lang="pt">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Mapoligon</title>
-        
-    </head>
-    <body>
-        
+<html>
+<head>
+  <title>Mapa com marcadores</title>
+  <meta charset="utf-8">
+  <style>
+    #map {
+      width: 500px;
+      height: 400px;
+    }
+  </style>
+</head>
+<body>
+  <h1>Mapa com marcadores</h1>
+  <div id="map"></div>
 
-    </body>
+  <!-- Biblioteca Leaflet -->
+  <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
+      integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
+      crossorigin=""></script>
 
+  <script>
+    // Inicia o mapa
+    var map = L.map('map').setView([-22.8193937, -47.063796], 13);
+
+    // Adiciona o mapa do OpenStreetMap
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+    }).addTo(map);
+
+    // Adiciona um marcador ao clicar no mapa
+    var markers = new L.FeatureGroup();
+    map.on('click', onMapClick);
+
+    // Deleta o marcador ao clicar nele
+    markers.on('click', function(ev) {
+        map.removeLayer(ev.layer);
+    });
+
+    // Função para adicionar o marcador
+    function onMapClick(e) {
+        var marker = new L.Marker(e.latlng);
+        markers.addLayer(marker);
+        map.addLayer(markers);
+    }
+  </script>
+</body>
 </html>
