--- a/views/map.ejs
+++ b/views/map.ejs
@@ -9,8 +9,43 @@
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
    </head>
    <body>
-      <div id = "map" style = "width: 900px; height: 580px"></div>
-      <button id = "btei" type="button" class="btn btn-primary">Criar</button>
+      <div>
+         <style>
+            ul {
+               list-style-type: none;
+               margin: 0;
+               padding: 0;
+               width: 15%;
+               background-color: #f1f1f1;
+            }
+         
+            li a {
+               display: block;
+               color: #000;
+               padding: 8px 16px;
+               text-decoration: none;
+            }
+         
+            /* Change the link color on hover */
+            li a:hover {
+               background-color: #555;
+               color: white;
+            }
+         </style>
+         
+         <ul class="bg-dark" style = "float: Left;">
+            <li><a class="navbar-brand" href="#">
+               <img src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30" height="24">
+             </a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#news">News</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#about">About</a></li>
+         </ul>
+      </div>
+
+      <div id = "map" style = "width: 85%; height: 50em; float: right"></div>
+      <button id = "btei" type="button" class="btn btn-primary">Novo Poligono</button>
       <button id = "bdel" type="button" class="btn btn-primary">Deletar</button>
 
 
