--- a/views/map.ejs
+++ b/views/map.ejs
@@ -5,42 +5,18 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Mapoligon</title>
+      <link rel="stylesheet" type="text/css" href="css/styles.css" /> 
       <link rel = "stylesheet" href = "http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"/>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
    </head>
    <body>
       <div>
-         <style>
-            ul {
-               list-style-type: none;
-               margin: 0;
-               padding: 0;
-               width: 15%;
-               background-color: #f1f1f1;
-            }
-         
-            li a {
-               display: block;
-               color: #000;
-               padding: 8px 16px;
-               text-decoration: none;
-            }
-         
-            /* Change the link color on hover */
-            li a:hover {
-               background-color: #555;
-               color: white;
-            }
-         </style>
-         
-         <ul class="bg-dark" style = "float: Left;">
-            <li><a class="navbar-brand" href="#">
-               <img src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30" height="24">
-             </a></li>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#news">News</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="#about">About</a></li>
+         <ul class="text-bg-dark " style = "float: Left;">
+            <li><a class="navbar-brand d-flex justify-content-center" href="/">Mapoligon</a></li>
+            <li><a class = "text-bg-dark d-flex justify-content-center" href="/">Mapa</a></li>
+            <li><a class = "text-bg-dark d-flex justify-content-center" id = "btei" type="button">Novo Poligono</a></li>
+            <li><a class = "text-bg-dark d-flex justify-content-center" href="#contact">Contact</a></li>
+            <li><a class = "text-bg-dark d-flex justify-content-center" href="#about">About</a></li>
          </ul>
       </div>
 
