--- a/views/map.ejs
+++ b/views/map.ejs
@@ -10,19 +10,14 @@
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
    </head>
    <body>
-      <div>
-         <ul class="text-bg-dark " style = "float: Left;">
-            <li><a class="navbar-brand d-flex justify-content-center" href="/">Mapoligon</a></li>
-            <li><a class = "text-bg-dark d-flex justify-content-center" href="/">Mapa</a></li>
-            <li><a class = "text-bg-dark d-flex justify-content-center" id = "btei" type="button">Novo Poligono</a></li>
-            <li><a class = "text-bg-dark d-flex justify-content-center" href="#contact">Contact</a></li>
-            <li><a class = "text-bg-dark d-flex justify-content-center" href="#about">About</a></li>
-         </ul>
-      </div>
+      <%- include ('frags/nav.ejs') %>
 
-      <div id = "map" style = "width: 85%; height: 50em; float: right"></div>
+      <div id = "map" style = "width: 90%; height:80vh; float: right"></div>
       <button id = "btei" type="button" class="btn btn-primary">Novo Poligono</button>
       <button id = "bdel" type="button" class="btn btn-primary">Deletar</button>
+      <button id = "bsav" type="button" class="btn btn-primary">Salvar</button>
+      
+      
 
 
       <script src = "http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
