--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,8 +13,12 @@
 
     <div id = "map" style = "width: 100%; height: 93vh; float: right"></div>
 
+    <script>
+      var plgs = <%- JSON.stringify(poligons) %>;
+    </script>
+
     <script src = "http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
-    <script src = "js/leaflet.js"></script>
+    <script src = "js/indexBack.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
